# vestige-sync

./: .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  intent.md
src/: cli.rs  export.rs  import.rs  main.rs  proxy.rs  template.rs
