[package]
name = "vestige-sync"
version = "0.1.0"
edition = "2024"
license = "0BSD"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
hostname = "0.4"
notify-debouncer-mini = "0.7"
whoami = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "time", "fs", "io-std", "io-util", "sync"] }

[dev-dependencies]
tempfile = "3"
